--- a/jobs/broker-deregistrar/templates/errand.sh.erb
+++ b/jobs/broker-deregistrar/templates/errand.sh.erb
@@ -1,33 +1,35 @@
 #!/bin/bash
-set -e
-export PATH=$PATH:/var/vcap/packages/ruby/bin
-cd /var/vcap/packages/broker-registrar
+
+set -eu
 
 CF_API_URL='<%= p("cf.api_url") %>'
 CF_ADMIN_USERNAME='<%= p("cf.admin_username") %>'
 CF_ADMIN_PASSWORD='<%= p("cf.admin_password") %>'
+CF_SKIP_SSL_VALIDATION='<%= p("cf.skip_ssl_validation") %>'
+
 BROKER_NAME='<%= p("broker.name") %>'
-BROKER_URL='<%= p("broker.protocol") %>://<%= p("broker.host") %>:<%= p("broker.port") %>'
-BROKER_USERNAME='<%= p("broker.username") %>'
-BROKER_PASSWORD='<%= p("broker.password") %>'
 
-# partially-redacted command for debugging
-echo "
-bundle exec ./bin/broker-registrar delete
-    --cf-address $CF_API_URL
-    --cf-username $CF_ADMIN_USERNAME
-    --cf-password ********
-    --broker-name $BROKER_NAME
-    --broker-url $BROKER_URL
-    --broker-username $BROKER_USERNAME
-    --broker-password ********
-"
+echo "CF_API_URL=${CF_API_URL}"
+echo "CF_SKIP_SSL_VALIDATION=${CF_SKIP_SSL_VALIDATION}"
+echo "CF_ADMIN_USERNAME=${CF_ADMIN_USERNAME}"
+echo "BROKER_NAME=${BROKER_NAME}"
 
-bundle exec ./bin/broker-registrar delete \
-    --cf-address $CF_API_URL              \
-    --cf-username $CF_ADMIN_USERNAME      \
-    --cf-password $CF_ADMIN_PASSWORD      \
-    --broker-name $BROKER_NAME            \
-    --broker-url $BROKER_URL              \
-    --broker-username $BROKER_USERNAME    \
-    --broker-password $BROKER_PASSWORD
+export PATH=/var/vcap/packages/cf-cli/bin
+
+if [[ ${CF_SKIP_SSL_VALIDATION} == "true" ]]; then
+  cf api ${CF_API_URL} --skip-ssl-validation
+else
+  cf api ${CF_API_URL}
+fi
+
+cf auth \
+  ${CF_ADMIN_USERNAME} \
+  ${CF_ADMIN_PASSWORD}
+
+cf purge-service-offering \
+  ${BROKER_NAME} \
+  -f
+
+cf delete-service-broker \
+  ${BROKER_NAME} \
+  -f
