allow to specify a list of service names
this is usefull when there are multiple services provided by one broker or when the service name differs from the broker name

--- a/jobs/broker-deregistrar/templates/errand.sh.erb
+++ b/jobs/broker-deregistrar/templates/errand.sh.erb
@@ -26,9 +26,11 @@ cf auth \
   ${CF_ADMIN_USERNAME} \
   ${CF_ADMIN_PASSWORD}
 
+<% p("broker.services", ["${BROKER_NAME}"]).each do |service| %>
 cf purge-service-offering \
-  ${BROKER_NAME} \
+   <%= service %> \
   -f
+<% end %>
 
 cf delete-service-broker \
   ${BROKER_NAME} \
